--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,7 @@
 <nav class="nav">
   <a href="/products/list/">Products</a>
   <a href="/cart/">Cart</a>
-  <a href="/orders/">(API) Orders</a>
+  <a href="/orders/orders">(API) Orders</a>
   <a href="/docs/">Swagger</a>
   {% if request.user.is_authenticated %}
     <span>Hi, {{ request.user.username }}</span>
